--- a/swiftPoo/Base.lproj/Main.storyboard
+++ b/swiftPoo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jnE-QM-eu4">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -8,6 +8,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="MAt-oE-Zs3">
+            <objects>
+                <navigationController id="jnE-QM-eu4" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="orY-GE-sIN">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WFT-sp-RdZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="00w-5s-Q3r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-914" y="-14"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -17,18 +33,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fabrica de automoviles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdA-Vq-q0M">
-                                <rect key="frame" x="87.333333333333329" y="75" width="218.33333333333337" height="26.333333333333329"/>
+                                <rect key="frame" x="87.333333333333329" y="118.99999999999999" width="218.33333333333337" height="26.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="me2-hg-RIU">
-                                <rect key="frame" x="93.666666666666686" y="141.33333333333334" width="206" height="35"/>
+                                <rect key="frame" x="93.666666666666686" y="185.33333333333334" width="206" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Crear automovil sencillo"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jzG-kL-b4h">
-                                <rect key="frame" x="96.666666666666686" y="216.33333333333334" width="200" height="35"/>
+                                <rect key="frame" x="96.666666666666686" y="260.33333333333331" width="200" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Crear automovil Mazda"/>
                             </button>
@@ -44,6 +60,10 @@
                             <constraint firstItem="sdA-Vq-q0M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="gbk-GJ-4qU"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="TKx-fa-2ZE"/>
+                    <connections>
+                        <segue destination="r2V-TR-Ys9" kind="show" id="Jny-Xc-vnA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -58,29 +78,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gUd-MO-x7i">
-                                <rect key="frame" x="21.666666666666657" y="75" width="350" height="200"/>
+                                <rect key="frame" x="21.666666666666657" y="119" width="350" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="FnK-Bw-xEY"/>
                                     <constraint firstAttribute="height" constant="200" id="G54-r1-lq5"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6r-6G-eRH">
-                                <rect key="frame" x="148" y="295" width="97" height="35"/>
+                                <rect key="frame" x="148" y="339" width="97" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Encender"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dsw-Qe-U2A">
-                                <rect key="frame" x="157" y="350" width="79" height="35"/>
+                                <rect key="frame" x="157" y="394" width="79" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Apagar"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b5J-J8-EtQ">
-                                <rect key="frame" x="152.66666666666666" y="405" width="88" height="35"/>
+                                <rect key="frame" x="152.66666666666666" y="449" width="88" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Acelerar"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Informacion del carro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9lg-hK-Qaw">
-                                <rect key="frame" x="115.66666666666669" y="510" width="162" height="21"/>
+                                <rect key="frame" x="115.66666666666669" y="554" width="162" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -101,6 +121,7 @@
                             <constraint firstItem="9lg-hK-Qaw" firstAttribute="centerX" secondItem="Ttq-ox-miW" secondAttribute="centerX" id="wkC-X6-u46"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="bpK-AR-XlT"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nih-tG-ZQh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
